--- a/palyndromeChecker/styles.css
+++ b/palyndromeChecker/styles.css
@@ -13,7 +13,7 @@ FONT SIZE SYSTEM (px)
   --blue: #31326f;
   --light-blue: #005490;
   --color-primary: #9d0191;
-  --color-sec: rgb(219, 100, 0);
+  --color-sec: #db6400;
   --grey: #eee;
   --dark-grey: #222831;
   --green: #008c00;
@@ -38,8 +38,7 @@ html {
 body {
   min-height: 100vh;
   font-family: "Open Sans", sans-serif;
-  padding: clamp(20px, 5vw, 50px) 10px 10px;
-  background-color: #333;
+  background: var(--light-blue);
 }
 
 p {
@@ -48,65 +47,52 @@ p {
 }
 
 img {
-  width: 100%;
+  max-width: 100%;
+}
+.uppercase {
+  text-transform: uppercase;
 }
 
 .container {
   display: flex;
+  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  background: var(--light-blue);
+}
+.box {
+  width: 30%;
+  display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 25%;
-  margin: 0 auto;
-  padding: 0 20px;
-  background: var(--light-blue);
-  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.3);
+  background-color: var(--white);
+  border-radius: 5px;
+  padding: 4rem;
 }
-.heading-primary {
-  font-stretch: normal;
-  font-size: 2.4rem;
-  font-weight: 300;
-  color: var(--white);
-  padding: 1.8rem 0 0 0;
-}
-.counter-txt {
-  font-size: 6.4rem;
-  color: var(--white);
-  display: block;
-}
-.line {
-  display: block;
-  background-color: #fff;
-  width: 90%;
-  height: 2px;
-  margin-bottom: 1.6rem;
-}
-.container-btn {
+.form {
   display: flex;
   justify-content: space-between;
-  padding-bottom: 1.4rem;
+  margin-bottom: 3.2rem;
 }
-.btn {
-  min-width: 11rem;
-  font-size: 0.8rem;
-  margin: 0.8em;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  padding: 10px;
+.form__txt {
+  outline: none;
+  /* width: 250px; */
   border: none;
-  font-weight: 700;
+  border-bottom: 2px solid var(--color-sec);
+  padding: 0.8em 0.2em; /* Set padding */
+  font-size: 1.6em; /* Set font size */
+}
+.form__btn {
   color: var(--white);
-  cursor: pointer;
-  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.3);
+  background-color: var(--color-primary);
+  border: none;
+  border-radius: 5px;
+  margin: 0 1em;
+  padding: 1em 2.5em;
 }
-
-.btn-res {
-  color: var(--black);
-}
-
-.icon {
-  font-size: 2.4em;
-  margin-right: 1em;
+.result {
+  font-weight: 600;
+  font-size: 2.4rem;
 }
 /*
 SPACING SYSTEM (px)
