--- a/copyToClipboard/styles.css
+++ b/copyToClipboard/styles.css
@@ -15,7 +15,8 @@ FONT SIZE SYSTEM (px)
   --color-primary: #9d0191;
   --color-sec: #db6400;
   --grey: #eee;
-  --dark-grey: #222831;
+  --dark-grey: #666;
+  --dark-grey-2: #222831;
   --green: #008c00;
 }
 
@@ -57,41 +58,36 @@ img {
   align-items: center;
   background: var(--light-blue);
 }
-.box {
-  width: 30%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: var(--white);
-  border-radius: 5px;
-  padding: 4rem;
-}
-.form {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 3.2rem;
-}
-.form__txt {
-  outline: none;
-  /* width: 250px; */
-  border: none;
-  border-bottom: 2px solid var(--color-sec);
-  padding: 0.8em 0.2em; /* Set padding */
-  font-size: 1.6em; /* Set font size */
-}
-.form__btn {
-  color: var(--white);
-  background-color: var(--color-primary);
-  border: none;
-  border-radius: 5px;
-  margin: 0 1em;
-  padding: 1em 2.5em;
-}
-.result {
-  font-weight: 600;
+.coupon__heading {
   font-size: 2.4rem;
+  color: var(--white);
 }
-
+.coupon__input {
+  margin-top: 1.8rem;
+}
+.coupon__input__txt {
+  border: none;
+  outline: none;
+  padding: 0.6em 2.4em;
+  border-radius: 0.5rem;
+  font-size: 2.4rem;
+  color: var(--dark-grey);
+}
+.coupon__input__btn {
+  font-size: 2.4rem;
+  border: none;
+  border-radius: 0.5rem;
+  padding: 0.6em;
+  background-color: var(--light-blue);
+  color: var(--white);
+  border: 1px solid var(--white);
+  margin-left: 1.2rem;
+}
+.coupon__input__btn:hover {
+  color: var(--light-blue);
+  background-color: var(--white);
+  transition: 300ms;
+}
 /*
 SPACING SYSTEM (px)
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
